# snek

./: CMakeLists.txt  README.md
include/: cli.h  version.h.in
src/: cli.c  main.c
